# reasonable-mind

./: .env.example  .gitignore  .markdownlint.json  8X_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  EXTENDED_THINKING_IMPLEMENTATION.md  EXTENDED_THINKING_QUICKREF.md  IMPLEMENTATION_GAP_ANALYSIS.md  ISSUES_RESOLVED.md  METAPHYSICS_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REVIEW_PLAN.md  SCALABILITY_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  coverage.xml  deno.json  docker-compose.yml  package-lock.json  package.json  plan-masterDevelopment.prompt.md  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.claude/: settings.local.json
.codacy/: codacy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/instructions/: codacy.instructions.md
.github/prompts/: plan-reasonableMindConstitution.prompt.md
.github/workflows/: build.yaml  codeql.yml  pre-pr-checks.yml  tests.yaml
agents/: ARCHITECTURE_AUDIT.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_METAPHYSICS.md  ARCHITECTURE_VIEWS.md  EXTENDED_THINKING.md  NEURO_SYMBOLIC_ARCHITECTURE.md  README.md  __init__.py  agent.py  agent_demo.ipynb  architecture_views.html  extended_thinking_demo.py  extended_thinking_integration.ipynb  logic_foundation_demo.ipynb  neuro_symbolic_demo.py  neuro_symbolic_integration.py  rigorous_logic_demo.py  rigorous_logic_integration.ipynb  scalability_demo.py  test_message_params.py
agents/core/: CHANGELOG.md  __init__.py  adversarial_testing.py  architectural_layer.py  architecture_selector.py  benchmark_suite.py  calibration_system.py  categorical_engine.py  clarification_system.py  constraint_system.py  critic_system.py  curriculum_system.py  debate_system.py  decision_model.py  evidence_system.py  fallacy_detector.py  feedback_system.py  fuzzy_inference.py  hallucination_mitigation.py  inference_engine.py  latency_control.py  logic_engine.py  logic_orchestrator.py  memory_persistence.py  memory_system.py  multimodal_pipeline.py  observability_system.py  planning_system.py  reranker.py  retrieval_augmentation.py  retrieval_diversity.py  robustness_system.py  role_system.py  rule_engine.py  safety_system.py  self_consistency.py  semantic_parser.py  source_trust.py  telemetry_replay.py  tool_arbitration.py  (+3 more)
agents/core_logic/: CHANGELOG.md  __init__.py  categorical_engine.py  logic_engine.py
agents/examples/: triadic_synthesis_example.py
agents/governance/: AGENT_GUIDE.md  __init__.py  execution_proxy.py  plan_validator.py  process_gate.py  registry.py
agents/governed/: __init__.py  constraint_loader.py  execution_proxy.py  governed_agent.py  persona_lock.py  plan_validator.py
agents/logic/: README.md  __init__.py  decision_model.py  epistemic.py  grounding.py  knowledge_base.py  reasoning_agent.py
agents/tests/: CHANGELOG.md  TEST_SUITE_SUMMARY.md  __init__.py  claude-quickstarts.code-workspace  conftest.py  test_advanced_enhancements.py  test_architectural_compliance.py  test_architectural_metaphysics.py  test_architecture_selector.py  test_categorical_engine.py  test_command_security.py  test_critic_system.py  test_curriculum_observability_role_semantic_clarification.py  test_debate_system.py  test_decision_model.py  test_decision_model_blocking.py  test_decision_model_verification.py  test_evidence_system.py  test_fallacy_detector.py  test_governance.py  test_governance_edges.py  test_grounding_parser.py  test_inference_engine.py  test_knowledge_base_contradictions.py  test_logic_engine.py  test_logic_orchestrator.py  test_memory_persistence.py  test_memory_system.py  test_phase2_enhancements.py  test_planning_system.py  test_planning_verification_gate.py  test_reasoning_agent_evidence.py  test_reasoning_agent_inference.py  test_reranker.py  test_robustness_system.py  test_rule_engine.py  (+8 more)
autonomous-coding/: README.md  security.py  test_security.py
data/: argument_forms.json  fallacies.json
financial-data-analyst/: README.md  package-lock.json  package.json
junit/: agents-test-results.xml
tests/: test_full_coverage_completion.py
trainer/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  PROJECT_STATUS.md  README.md  README_OLD.md  SECURITY.md  VERIFICATION_COMPLETE.md  advanced.html  agent_profiles.js  autonomous.html  four_layer.html  iframe_wrapper.html  index.html  package-lock.json  package.json  server.py  verify-deployment.sh
(+34 files in other folders)
