[project]
name = "reasonable-mind"
version = "0.1.0"
description = "Neuro-symbolic reasoning framework with extended thinking capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-ra",
    "-q",
    "--cov=agents.governance",
    "--cov=agents.core_logic",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=45",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore ResourceWarning from coverage's sqlite connections
    "ignore:unclosed database:ResourceWarning",
    # Ignore CoverageWarning for modules not imported during tests
    "ignore::coverage.exceptions.CoverageWarning",
]
testpaths = ["agents", "autonomous-coding", "tests"]
norecursedirs = [".venv", "trainer", "node_modules", ".git"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "slow: Slow tests (performance, benchmarks)",
    "security: Security-critical tests",
    "database: Tests requiring database",
]

[tool.coverage.run]
branch = true
source = ["agents/governance", "agents/core_logic"]
omit = ["*/tests/*", "*/__init__.py", "*/.venv/*", "*/test_*.py", "*_test.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
