[project]
name = "reasonable-mind"
version = "0.1.0"
description = "Neuro-symbolic reasoning framework with extended thinking capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "annotated-types>=0.7.0",
    "anthropic>=0.75.0",
    "anyio>=4.12.0",
    "attrs>=25.4.0",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",
    "click>=8.3.1",
    "coverage>=7.12.0",
    "cryptography>=46.0.3",
    "distro>=1.9.0",
    "docstring_parser>=0.17.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jiter>=0.12.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "mcp>=1.23.1",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic_core>=2.41.5",
    "Pygments>=2.19.2",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "referencing>=0.37.0",
    "rpds-py>=0.30.0",
    "sniffio>=1.3.1",
    "sse-starlette>=3.0.3",
    "starlette>=0.50.0",
    "typing-inspection>=0.4.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "-ra",
    "-q",
    "--cov=agents.governance",
    "--cov=agents.core_logic",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=45",
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore ResourceWarning from coverage's sqlite connections
    "ignore:unclosed database:ResourceWarning",
    # Ignore CoverageWarning for modules not imported during tests
    "ignore::coverage.exceptions.CoverageWarning",
]
testpaths = ["agents", "autonomous-coding", "tests"]
norecursedirs = [".venv", "trainer", "node_modules", ".git"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multiple components)",
    "slow: Slow tests (performance, benchmarks)",
    "security: Security-critical tests",
    "database: Tests requiring database",
]

[tool.coverage.run]
branch = true
source = ["agents/governance", "agents/core_logic"]
omit = ["*/tests/*", "*/__init__.py", "*/.venv/*", "*/test_*.py", "*_test.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
